--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
     "recharts": "^2.12.7",
+    "recoil": "^0.7.7",
     "stripe": "^15.9.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
