--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "module"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.20.4",
     "@clerk/nextjs": "^5.1.3",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.4.2",
