--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.20.4",
+    "@clerk/clerk-sdk-node": "^5.1.4",
     "@clerk/nextjs": "^5.1.3",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.4.2",
