--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
     "next": "14.2.3",
     "next-auth": "^4.24.10",
     "react": "^18",
+    "react-carousel": "^4.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-hook-toast": "^0.0.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
-    "react-slick": "^0.30.2",
+    "react-slick": "^0.30.3",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "stripe": "^15.9.0",
