--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@uploadthing/react": "^7.1.3",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
