--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-slick": "^0.30.3",
+    "react-typical": "^0.1.3",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "stripe": "^15.9.0",
