--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.3",
     "react-typical": "^0.1.3",
     "recharts": "^2.12.7",
