--- a/package.json
+++ b/package.json
@@ -38,18 +38,20 @@
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-auth": "^4.24.10",
-    "react": "^18",
+    "react": "^19.0.0",
     "react-carousel": "^4.3.0",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.51.5",
     "react-hook-toast": "^0.0.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.3",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "stripe": "^15.9.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -62,10 +64,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
+    "@types/swiper": "^5.4.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prisma": "^5.14.0",
+    "swiper": "^11.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
