--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/clerk-sdk-node": "^5.1.4",
     "@clerk/nextjs": "^5.1.3",
     "@hello-pangea/dnd": "^16.6.0",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.4.2",
     "@mux/mux-node": "^9.0.1",
     "@mux/mux-player-react": "^3.2.4",
@@ -36,6 +37,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
     "flutterwave-react-v3": "^1.3.2",
+    "framer-motion": "^12.4.1",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-auth": "^4.24.10",
@@ -46,6 +48,7 @@
     "react-hook-toast": "^0.0.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.15.1",
     "react-quill": "^2.0.0",
     "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.12.7",
