--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "14.2.3",
     "next-auth": "^4.24.10",
     "next-sitemap": "^4.2.3",
+    "nodemailer": "^6.10.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.51.5",
