--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/aos": "^3.0.7",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/swiper": "^5.4.3",
