--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mux/mux-node": "^9.0.1",
     "@mux/mux-player-react": "^3.2.4",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
