--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
+    "dotenv": "^16.4.7",
+    "express-rate-limit": "^7.5.0",
     "flutterwave-react-v3": "^1.3.2",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.379.0",
@@ -44,6 +46,7 @@
     "next-auth": "^4.24.10",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.0",
+    "openai": "^4.87.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.51.5",
@@ -51,6 +54,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.15.1",
+    "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
     "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.12.7",
