--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "openai": "^4.87.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.51.5",
     "react-hook-toast": "^0.0.3",
     "react-hot-toast": "^2.4.1",
