--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.15.1",
     "react-markdown": "^10.1.0",
+    "react-number-format": "^5.4.3",
     "react-quill": "^2.0.0",
     "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.12.7",
