--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "canvas-confetti": "^1.9.3",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
