--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@tanstack/react-table": "^8.17.3",
     "@uploadthing/react": "^7.1.3",
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express-rate-limit": "^7.5.0",
     "flutterwave-react-v3": "^1.3.2",
@@ -49,6 +50,7 @@
     "nodemailer": "^6.10.0",
     "openai": "^4.87.3",
     "react": "^18.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.0.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.51.5",
