--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/courses/[courseId]/checkout copy/route.js", "components/sections/SectionsDetails.tsx", "components/sections/SectionsDetails.jsx", "components/layout/Testimonials.jsx", "components/layout/TestimonialCarousel.jsx", "next-sitemap.config.js"],
   "exclude": ["node_modules"]
