--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "type": "module"
+    "seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' scripts/seed-live-classes.ts"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.20.4",
@@ -27,10 +27,15 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@sendgrid/mail": "^8.1.4",
     "@tanstack/react-table": "^8.17.3",
     "@uploadthing/react": "^7.1.3",
+    "@zoom/meetingsdk": "^3.12.0",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "canvas-confetti": "^1.9.3",
@@ -45,7 +50,6 @@
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
-    "next-auth": "^4.24.10",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.0",
     "openai": "^4.87.3",
@@ -84,6 +88,7 @@
     "prisma": "^5.14.0",
     "swiper": "^11.2.1",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
