--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "stripe": "^15.9.0",
+    "svix": "^1.63.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.4.1",
