--- a/package.json
+++ b/package.json
@@ -90,6 +90,6 @@
     "swiper": "^11.2.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "5.0.0"
   }
 }
