--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.20.4",
-    "@clerk/clerk-sdk-node": "^5.1.4",
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^5.1.3",
     "@hello-pangea/dnd": "^16.6.0",
     "@heroicons/react": "^2.2.0",
@@ -49,7 +49,8 @@
     "flutterwave-react-v3": "^1.3.2",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.379.0",
-    "next": "14.2.3",
+    "next": "^14.2.3",
+    "next-auth": "^4.24.10",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.0",
     "openai": "^4.87.3",
