admin panel fix

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@sendgrid/mail": "^8.1.4",
     "@tanstack/react-table": "^8.17.3",
     "@uploadthing/react": "^7.1.3",
