--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
@@ -36,7 +37,8 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.1.4",
     "@sendgrid/mail": "^8.1.4",
-    "@tanstack/react-table": "^8.17.3",
+    "@tanstack/react-table": "^8.21.2",
+    "@types/react-slick": "^0.23.13",
     "@uploadthing/react": "^7.1.3",
     "@zoom/meetingsdk": "^3.1.0",
     "aos": "^2.3.4",
@@ -70,8 +72,10 @@
     "react-number-format": "^5.4.3",
     "react-quill": "^2.0.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.30.3",
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "stripe": "^15.9.0",
     "svix": "^1.63.0",
     "tailwind-merge": "^2.3.0",
