--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/swiper": "^5.4.3",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "glob": "^11.0.1",
