--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "postbuild": "next-sitemap",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prebuild": "npm run lint && npm run type-check",
+    "type-check": "tsc --noEmit",
     "postinstall": "prisma generate",
     "seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' scripts/seed-live-classes.ts",
     "fix-entities": "node scripts/fix-unescaped-entities.js"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.20.4",
-    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/express": "^1.4.4",
     "@clerk/nextjs": "^5.1.3",
     "@hello-pangea/dnd": "^16.6.0",
     "@heroicons/react": "^2.2.0",
@@ -84,6 +86,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@next/codemod": "^15.3.0",
     "@types/aos": "^3.0.7",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
@@ -92,7 +95,9 @@
     "@types/react-dom": "^18",
     "@types/swiper": "^5.4.3",
     "@types/uuid": "^10.0.0",
-    "eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
+    "eslint": "^9.24.0",
     "eslint-config-next": "14.2.3",
     "glob": "^11.0.1",
     "postcss": "^8",
