--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "recharts": "^2.12.7",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
+    "sonner": "^2.0.3",
     "stripe": "^15.9.0",
     "svix": "^1.63.0",
     "tailwind-merge": "^2.3.0",
