--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prebuild": "npm run lint && npm run type-check",
     "type-check": "tsc --noEmit",
     "postinstall": "prisma generate",
-    "seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' scripts/seed-live-classes.ts",
+    "seed": "ts-node -T scripts/seed-live-classes.ts",
     "fix-entities": "node scripts/fix-unescaped-entities.js"
   },
   "dependencies": {
